--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
   "name": "gt-map",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "lib/index.js",
+  "main": "dist/cjs/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:dev": "cross-env NODE_ENV=development rollup -c"
   },
   "author": "fengyaw",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-component": "^1.1.1",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "rollup": "^2.43.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
