--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gt-map",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/cjs/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jsdom": "^16.5.1"
   }
 }
